--- a/fizzbuzz/pom.xml
+++ b/fizzbuzz/pom.xml
@@ -7,9 +7,20 @@
     <groupId>edu.uagrm</groupId>
     <artifactId>fizzbuzz</artifactId>
     <version>1.0-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
-
-    <dependencies>
+  <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
