--- a/urbanager/backend/urbanager-bdd/package.json
+++ b/urbanager/backend/urbanager-bdd/package.json
@@ -21,6 +21,7 @@
     "chai": "^4.1.2",
     "cucumber": "^4.2.1",
     "request": "^2.85.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "selenium-webdriver": "^4.0.0-alpha.1"
   }
 }
